[FIX] web_responsive: log note overflow into content
-step to reproduce: create a randome with random content, log note to it
with some long content, if you are using chatter position is bottom, you
can only see the log note because its cover all the content
-In this commit we remove overflow-x: auto; in css

--- a/web_responsive/static/src/legacy/scss/web_responsive.scss
+++ b/web_responsive/static/src/legacy/scss/web_responsive.scss
@@ -100,7 +100,6 @@ html .o_web_client .o_action_manager .o_action {
     .o_form_editable {
         .o_form_sheet {
             max-width: calc(100% - 32px) !important;
-            overflow-x: auto;
         }
 
         .o_cell .o_form_label:not(.o_status):not(.o_calendar_invitation) {
